<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OwnPass</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in_register"><b>Sign in</b></string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="action_forgot_password">Recover lost password</string>

    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="activation_progress">Activating device ...</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_password_not_matching">The passwords do not match</string>
    <string name="error_registration_not_successful">Registration not successful. Try again!</string>
    <string name="error_activation_not_successful">Activation not successful</string>

    <string name="action_register">Register</string>
    <string name="action_activate_short">Activate</string>

    <string name="reg_prompt_password">Retype password</string>
    <string name="register_phone_number_hint">Phone number</string>
    <string name="action_register_short">Register</string>
</resources>
